--- a/.github/workflows/main_be-productive-plus.yml
+++ b/.github/workflows/main_be-productive-plus.yml
@@ -1,64 +1,36 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy Node.js app to Azure Web App - be-productive-plus
+name: Build and Deploy Node.js App to Azure Web App
 
 on:
   push:
     branches:
-      - main
-  workflow_dispatch:
+      - main  # Change this if your default branch is different
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: windows-latest
-    permissions:
-      contents: read #This is required for actions/checkout
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Set up Node.js version
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '22.x'
+          node-version: '18'  # Make sure this matches your runtime
 
-      - name: npm install, build
-        run: |
-          npm install
-          npm run build --if-present
-      
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
-        with:
-          name: node-app
-          path: .
+      - name: Install dependencies
+        run: npm install
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      - name: Build (if needed)
+        run: echo "No build step for backend-only Node app"
 
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: node-app
-      
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_EB2F150B2E9C4EB082F42F0A3E3DF56D }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_AECAF80C3B274DD8B86FA7451043C735 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_0AD7354D05C54652A29A6FE29EF49F96 }}
+      - name: Zip project
+        run: Compress-Archive -Path * -DestinationPath app.zip
 
-      - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v3
-        id: deploy-to-webapp
+      - name: Deploy to Azure Web App
+        uses: azure/webapps-deploy@v2
         with:
-          app-name: 'be-productive-plus'
-          slot-name: 'Production'
-          package: .
-          
+          app-name: be-productive-plus  # Replace with your actual app name (without the region stuff)
+          slot-name: production
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          package: app.zip
