--- a/.github/workflows/main_be-productive-plus.yml
+++ b/.github/workflows/main_be-productive-plus.yml
@@ -3,7 +3,7 @@ name: Build and Deploy Node.js App to Azure Web App
 on:
   push:
     branches:
-      - main  # Change this if your default branch is different
+      - main  # Adjust if needed
 
 jobs:
   build-and-deploy:
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'  # Make sure this matches your runtime
+          node-version: '18'
 
       - name: Install dependencies
         run: npm install
@@ -27,10 +27,17 @@ jobs:
       - name: Zip project
         run: Compress-Archive -Path * -DestinationPath app.zip
 
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_EB2F150B2E9C4EB082F42F0A3E3DF56D }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_AECAF80C3B274DD8B86FA7451043C735 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_0AD7354D05C54652A29A6FE29EF49F96 }}
+
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
-          app-name: be-productive-plus  # Replace with your actual app name (without the region stuff)
+          app-name: be-productive-plus
           slot-name: production
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: app.zip
