--- a/.github/workflows/main_be-productive-plus.yml
+++ b/.github/workflows/main_be-productive-plus.yml
@@ -1,31 +1,54 @@
-name: Build and Deploy Node.js App to Azure Web App
+# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+# More GitHub Actions for Azure: https://github.com/Azure/actions
+
+name: Build and deploy Node.js app to Azure Web App - be-productive-plus
 
 on:
   push:
     branches:
-      - main  # Adjust if needed
+      - main
+  workflow_dispatch:
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: windows-latest
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    permissions:
+      contents: read # This is required for actions/checkout
 
-      - name: Set up Node.js
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: '22.x'
 
-      - name: Install dependencies
-        run: npm install
+      - name: npm install, build
+        run: |
+          npm install
+          npm run build --if-present
 
-      - name: Build (if needed)
-        run: echo "No build step for backend-only Node app"
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v4
+        with:
+          name: node-app
+          path: .
 
-      - name: Zip project
-        run: Compress-Archive -Path * -DestinationPath app.zip
+  deploy:
+    runs-on: ubuntu-latest
+
+    needs: build
+
+    permissions:
+      id-token: write # This is required for requesting the JWT
+      contents: read  # This is required for actions/checkout
+
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v4
+        with:
+          name: node-app
 
       - name: Login to Azure
         uses: azure/login@v2
@@ -35,9 +58,9 @@ jobs:
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_0AD7354D05C54652A29A6FE29EF49F96 }}
 
       - name: Deploy to Azure Web App
-        uses: azure/webapps-deploy@v2
+        uses: azure/webapps-deploy@v3
+        id: deploy-to-webapp
         with:
-          app-name: be-productive-plus
-          slot-name: production
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: app.zip
+          app-name: 'be-productive-plus'
+          slot-name: 'Production'
+          package: .
